Fixed: marker z-index

--- a/src/main/webapp/components/map/Map.css
+++ b/src/main/webapp/components/map/Map.css
@@ -13,7 +13,7 @@
  }
 
  .propertyMarker {
-   z-index: 100;
+   z-index: 2;
  }
 
  .propertyMarkerPin {
